home page ready, both mobile and desktop

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
       <link rel="stylesheet" href="./header/header.css" />
       <script defer src="./header/header.js"></script>
 
+      <!-- service -->
+      <link rel="stylesheet" href="./service/service.css" />
+      <script defer src="./service/service.js"></script>
+
+      <!-- contact form -->
+      <link rel="stylesheet" href="./contact-form/form.css" />
+      <script defer src="./contact-form/form.js"></script>
+
+      <!-- footer -->
+      <link rel="stylesheet" href="./footer/footer.css" />
+      <script defer src="./footer/footer.js"></script>
+
       <!-- index -->
       <link rel="stylesheet" href="./index.css" />
       <script defer src="./index.js"></script>
@@ -19,7 +31,7 @@
       <title>Desafío M4</title>
    </head>
    <body>
-      <!-- <section class="welcome">
+      <section class="welcome">
          <div class="header-container"></div>
          <div class="welcome__titles-container">
             <h2 class="welcome__title titulo">Hola</h2>
@@ -27,25 +39,25 @@
          </div>
       </section>
       <section class="about-me">
+         <img src="./images/thanos.png" alt="This is me" class="about-me__image">
          <div class="about-me__text-container">
-            <h3 class="subtitulo">Soy Jae</h3>
-            <p class="body">
+            <h3 class="about-me__title subtitulo">Soy Jae</h3>
+            <p class="about-me__text body">
                Lorem ipsum dolor sit amet consectetur adipisicing elit.
                Architecto cumque dolore odio nesciunt totam tenetur ducimus in
                aliquam, ipsa culpa, ex animi minima quia repudiandae deleniti
                tempora quasi ratione doloremque.</p
             >
          </div>
-      </section> -->
+      </section>
       <section class="mi-services">
-         <h3 class="mi-services__title subtitulo">Mis Servicios</h3>
+         <h3 class="mi-services__title subtitulo--black">Mis Servicios</h3>
          <div class="mi-services__services-container">
-            <div class="service">
-               <img src="" alt="" class="service__img" />
-               <h4 class="large-bold"></h4>
-               <p class="body"></p>
             </div>
          </div>
       </section>
+      <section class="contact-me">
+         </section>
+      <section class="footer__container"></section>
    </body>
 </html>
