--- a/index.html
+++ b/index.html
@@ -35,19 +35,14 @@
          <div class="header-container"></div>
          <div class="welcome__titles-container">
             <h2 class="welcome__title titulo">Hola</h2>
-            <h3 class="welcome__subtitle subtitulo">Soy Jae</h3>
+            <h3 class="welcome__subtitle subtitulo">Soy Vader</h3>
          </div>
       </section>
       <section class="about-me">
-         <img src="./images/thanos.png" alt="This is me" class="about-me__image">
+         <img alt="This is me" class="about-me__image">
          <div class="about-me__text-container">
-            <h3 class="about-me__title subtitulo">Soy Jae</h3>
-            <p class="about-me__text body">
-               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-               Architecto cumque dolore odio nesciunt totam tenetur ducimus in
-               aliquam, ipsa culpa, ex animi minima quia repudiandae deleniti
-               tempora quasi ratione doloremque.</p
-            >
+            <h3 class="about-me__title subtitulo"></h3>
+            <p class="about-me__text body"></p>
          </div>
       </section>
       <section class="mi-services">
