who i am section on mobile done

--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Desafio M4</title>
+      <!-- fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link
-         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Orbitron:wght@500&display=swap"
+         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Orbitron:wght@500&family=Poppins&display=swap"
          rel="stylesheet"
       />
-      <link rel="stylesheet" href="./index.css" />
+      <!-- header -->
       <link rel="stylesheet" href="./components/header.css" />
       <script defer src="./components/header.js"></script>
+      <!-- welcome -->
+      <link rel="stylesheet" href="./components/welcome.css" />
+      <!-- main -->
+      <link rel="stylesheet" href="./index.css" />
       <script defer src="./index.js"></script>
    </head>
    <body>
@@ -23,6 +28,22 @@
             <h1 class="welcome__title">Hola</h1>
             <h2 class="welcome__subtitle">Soy Jae</h2>
          </div>
+      </section>
+      <section class="who-i-am">
+         <h2 class="who-i-am__title">Soy Jae</h2>
+         <p class="who-i-am__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam,
+            accusamus suscipit eum aut dolore officia corporis atque. Molestiae
+            aspernatur totam id deserunt, nam culpa provident, ut, quidem ad
+            soluta natus? Lorem ipsum dolor sit amet consectetur, adipisicing
+            elit. Nemo, mollitia nihil molestias ipsum voluptas sint amet ipsa
+            ex eveniet maxime sed laudantium doloribus, alias eaque ratione
+            voluptates vitae explicabo unde?
+         </p>
+      </section>
+      <section class="services">
+         <h2 class="services__title">Mis servicios</h2>
+         <div class="services__container"></div>
       </section>
    </body>
 </html>
