services and contact sections done

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link
-         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Orbitron:wght@500&family=Poppins&display=swap"
+         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Orbitron:wght@500&family=Poppins:wght@400;700&display=swap"
          rel="stylesheet"
       />
+      <!-- contact form -->
+      <link rel="stylesheet" href="./components/contact-form.css" />
+      <script defer src="./components/contact-form.js"></script>
+      <!-- services -->
+      <script src="./components/service.js"></script>
+      <link rel="stylesheet" href="./components/service.css" />
       <!-- header -->
       <link rel="stylesheet" href="./components/header.css" />
       <script defer src="./components/header.js"></script>
@@ -44,6 +50,10 @@
       <section class="services">
          <h2 class="services__title">Mis servicios</h2>
          <div class="services__container"></div>
+      </section>
+      <section class="contact">
+         <h2 class="contact__title">Escribime</h2>
+         <div class="contact__form-container"></div>
       </section>
    </body>
 </html>
