main/landing page mobile ready

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
          href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Orbitron:wght@500&family=Poppins:wght@400;700&display=swap"
          rel="stylesheet"
       />
+      <!-- footer -->
+      <link defer rel="stylesheet" href="./components/footer.css" />
+      <script src="./components/footer.js"></script>
       <!-- contact form -->
       <link rel="stylesheet" href="./components/contact-form.css" />
       <script defer src="./components/contact-form.js"></script>
@@ -29,7 +32,7 @@
    </head>
    <body>
       <section class="welcome">
-         <div class="welcome__header-container"></div>
+         <div class="welcome__header"></div>
          <div class="welcome__titles-container">
             <h1 class="welcome__title">Hola</h1>
             <h2 class="welcome__subtitle">Soy Jae</h2>
@@ -55,5 +58,6 @@
          <h2 class="contact__title">Escribime</h2>
          <div class="contact__form-container"></div>
       </section>
+      <footer class="footer"></footer>
    </body>
 </html>
