--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <!-- welcome -->
       <link rel="stylesheet" href="./components/welcome.css" />
       <!-- main -->
-      <link rel="stylesheet" href="./index.css" />
-      <script defer src="./index.js"></script>
+      <link rel="stylesheet" href="./pages/index.css" />
+      <script defer src="./pages/index.js"></script>
    </head>
    <body>
       <section class="welcome">
-         <div class="welcome__header"></div>
+         <header class="header"></header>
          <div class="welcome__titles-container">
             <h1 class="welcome__title">Hola</h1>
             <h2 class="welcome__subtitle">Soy Jae</h2>
