index desktop ready

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
          </div>
       </section>
       <section class="who-i-am">
+         <img
+            src="./elements/headshot.svg"
+            alt="Me but not me"
+            class="who-i-am__image"
+         />
          <h2 class="who-i-am__title">Soy Jae</h2>
          <p class="who-i-am__content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam,
