All pages are mobile and desktop ready. Working prototype 1.0

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,16 +22,19 @@
       <link rel="stylesheet" href="../components/header.css" />
       <script defer src="../components/header.js"></script>
       <!-- welcome -->
-      <link rel="stylesheet" href="../components/welcome--minimal.css" />
+      <link
+         rel="stylesheet"
+         href="../components/welcome--minimal-pink-and-yellow.css"
+      />
       <!-- main -->
       <link rel="stylesheet" href="./pages/portfolio.css" />
       <script defer src="./pages/portfolio.js"></script>
    </head>
    <body>
-      <section class="welcome--minimal">
+      <section class="welcome--minimal-pink-and-yellow">
          <header class="header"></header>
-         <div class="welcome--minimal__titles-container">
-            <h1 class="welcome--minimal__title">Portfolio</h1>
+         <div class="welcome--minimal-pink-and-yellow__titles-container">
+            <h1 class="welcome--minimal-pink-and-yellow__title">Portfolio</h1>
          </div>
       </section>
       <section class="jobs">
