--- a/contact.html
+++ b/contact.html
@@ -22,21 +22,24 @@
       <link rel="stylesheet" href="./components/header.css" />
       <script defer src="./components/header.js"></script>
       <!-- welcome -->
-      <link rel="stylesheet" href="./components/welcome--minimal.css" />
+      <link
+         rel="stylesheet"
+         href="./components/welcome--minimal-blue-and-green.css"
+      />
       <!-- main -->
       <link rel="stylesheet" href="./pages/contact.css" />
       <script defer src="./pages/contact.js"></script>
    </head>
    <body>
-      <section class="welcome--minimal">
+      <section class="welcome--minimal-blue-and-green">
          <header class="header"></header>
-         <div class="welcome--minimal__titles-container">
-            <h1 class="welcome--minimal__title">Contacto</h1>
+         <div class="welcome--minimal-blue-and-green__content-container">
+            <h1 class="welcome--minimal-blue-and-green__title">Contacto</h1>
+            <div class="contact__form-container"></div>
          </div>
       </section>
-      <section class="contact">
-         <div class="contact__form-container"></div>
-      </section>
+      <!-- <section class="contact">
+      </section> -->
       <footer class="footer"></footer>
    </body>
 </html>
